feat: Update sensor api and implement room api
