# api_sensor.go
@@ -4,13 +4,19 @@ import (
 	"github.com/DanielHeckrath/smartcentrix/proto"
 
 	"golang.org/x/net/context"
+	"golang.org/x/sync/errgroup"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/codes"
 )
 
 func (s *sensorAPI) RegisterSensor(ctx context.Context, req *smartcentrix.RegisterSensorRequest) (*smartcentrix.RegisterSensorResponse, error) {
 	// validate input parameter
-	err := s.validateUserSensor(ctx, req.UserId, req.SensorId, "Cannot register sensor for different user")
+	if req.SensorId == "" {
+		return nil, grpc.Errorf(codes.InvalidArgument, "SensorID cannot be empty")
+	}
+
+	// make sure calling and target user are the same
+	err := s.validateUserOwnership(ctx, req.UserId, "Cannot register sensor for different user")
 
 	if err != nil {
 		return nil, err
@@ -42,7 +48,12 @@ func (s *sensorAPI) RegisterSensor(ctx context.Context, req *smartcentrix.Regist
 
 func (s *sensorAPI) UpdateSensor(ctx context.Context, req *smartcentrix.UpdateSensorRequest) (*smartcentrix.UpdateSensorResponse, error) {
 	// validate input parameter
-	err := s.validateUserSensor(ctx, req.UserId, req.SensorId, "Cannot update sensor for different user")
+	if req.SensorId == "" {
+		return nil, grpc.Errorf(codes.InvalidArgument, "SensorID cannot be empty")
+	}
+
+	// make sure calling and target user are the same
+	err := s.validateUserOwnership(ctx, req.UserId, "Cannot update sensor for different user")
 
 	if err != nil {
 		return nil, err
@@ -66,6 +77,10 @@ func (s *sensorAPI) UpdateSensor(ctx context.Context, req *smartcentrix.UpdateSe
 		sensor.Status = req.Status.Value
 	}
 
+	if req.InUse != nil {
+		sensor.InUse = req.InUse.Value
+	}
+
 	sensor, err = s.sensorRepo.SaveSensor(ctx, sensor)
 
 	if err != nil {
@@ -81,7 +96,12 @@ func (s *sensorAPI) UpdateSensor(ctx context.Context, req *smartcentrix.UpdateSe
 
 func (s *sensorAPI) ToggleSensor(ctx context.Context, req *smartcentrix.ToggleSensorRequest) (*smartcentrix.ToggleSensorResponse, error) {
 	// validate input parameter
-	err := s.validateUserSensor(ctx, req.UserId, req.SensorId, "Cannot toggle sensor for different user")
+	if req.SensorId == "" {
+		return nil, grpc.Errorf(codes.InvalidArgument, "SensorID cannot be empty")
+	}
+
+	// make sure calling and target user are the same
+	err := s.validateUserOwnership(ctx, req.UserId, "Cannot toggle sensor for different user")
 
 	if err != nil {
 		return nil, err
@@ -108,41 +128,109 @@ func (s *sensorAPI) ToggleSensor(ctx context.Context, req *smartcentrix.ToggleSe
 	return res, nil
 }
 
-func (s *sensorAPI) ListSensor(context.Context, *smartcentrix.ListSensorRequest) (*smartcentrix.ListSensorResponse, error) {
-	return nil, errorNotImplemented
-}
-
-func (s *sensorAPI) ShowSensor(context.Context, *smartcentrix.ShowSensorRequest) (*smartcentrix.ShowSensorResponse, error) {
-	return nil, errorNotImplemented
-}
-
-func (s *sensorAPI) DeleteSensor(context.Context, *smartcentrix.DeleteSensorRequest) (*smartcentrix.DeleteSensorResponse, error) {
-	return nil, errorNotImplemented
-}
-
-func (s *sensorAPI) validateUserSensor(ctx context.Context, userID, sensorID, msg string) error {
-	// validate input parameter
-	if userID == "" {
-		return grpc.Errorf(codes.InvalidArgument, "UserID cannot be empty")
-	}
-
-	if sensorID == "" {
-		return grpc.Errorf(codes.InvalidArgument, "SensorID cannot be empty")
-	}
-
-	// authorize user
-	user, err := s.authorizeUser(ctx)
+func (s *sensorAPI) ListSensor(ctx context.Context, req *smartcentrix.ListSensorRequest) (*smartcentrix.ListSensorResponse, error) {
+	// make sure calling and target user are the same
+	err := s.validateUserOwnership(ctx, req.UserId, "Cannot view sensor for different user")
 
 	if err != nil {
-		return err
+		return nil, err
 	}
 
-	// check if request sender is target user
-	if user.ID != userID {
-		return grpc.Errorf(codes.PermissionDenied, "You are not allowed to access this resource: %s", msg)
+	var sensors []*Sensor
+	var rooms []*Room
+	var g *errgroup.Group
+	g, ctx = errgroup.WithContext(ctx)
+
+	g.Go(func() error {
+		sens, err := s.sensorRepo.ListSensors(ctx, req.UserId)
+
+		if err != nil {
+			return grpc.Errorf(codes.Internal, "Unable to load sensors: %s", err)
+		}
+
+		sensors = sens
+		return nil
+	})
+
+	g.Go(func() error {
+		r, err := s.roomRepo.ListRooms(ctx, req.UserId)
+
+		if err != nil {
+			return grpc.Errorf(codes.Internal, "Unable to load rooms: %s", err)
+		}
+
+		rooms = r
+		return nil
+	})
+
+	if err = g.Wait(); err != nil {
+		return nil, err
 	}
 
-	return nil
+	res := &smartcentrix.ListSensorResponse{
+		Sensors: convertSensors(sensors),
+		Rooms:   convertRooms(rooms),
+	}
+
+	return res, nil
+}
+
+func (s *sensorAPI) ShowSensor(ctx context.Context, req *smartcentrix.ShowSensorRequest) (*smartcentrix.ShowSensorResponse, error) {
+	// validate input parameter
+	if req.SensorId == "" {
+		return nil, grpc.Errorf(codes.InvalidArgument, "SensorID cannot be empty")
+	}
+
+	// make sure calling and target user are the same
+	err := s.validateUserOwnership(ctx, req.UserId, "Cannot view sensor for different user")
+
+	if err != nil {
+		return nil, err
+	}
+
+	sensor, err := s.loadSensor(ctx, req.SensorId)
+
+	if err != nil {
+		return nil, err
+	}
+
+	res := &smartcentrix.ShowSensorResponse{
+		Sensor: sensor.proto(),
+	}
+
+	return res, nil
+}
+
+func (s *sensorAPI) DeleteSensor(ctx context.Context, req *smartcentrix.DeleteSensorRequest) (*smartcentrix.DeleteSensorResponse, error) {
+	// validate input parameter
+	if req.SensorId == "" {
+		return nil, grpc.Errorf(codes.InvalidArgument, "SensorID cannot be empty")
+	}
+
+	// make sure calling and target user are the same
+	err := s.validateUserOwnership(ctx, req.UserId, "Cannot delete sensor for different user")
+
+	if err != nil {
+		return nil, err
+	}
+
+	sensor, err := s.loadSensor(ctx, req.SensorId)
+
+	if err != nil {
+		return nil, err
+	}
+
+	err = s.sensorRepo.DeleteSensor(ctx, sensor)
+
+	if err != nil {
+		return nil, grpc.Errorf(codes.Internal, "Unable to delete sensor: %s", err)
+	}
+
+	res := &smartcentrix.DeleteSensorResponse{
+		Sensor: sensor.proto(),
+	}
+
+	return res, nil
 }
 
 func (s *sensorAPI) loadSensor(ctx context.Context, sensorID string) (*Sensor, error) {
